[tool.poetry]
name = "transformer-demos"
version = "0.1.0"
description = "Demos using transformers"
authors = ["Alex Cunliffe <alexandra.cunliffe@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.20.1"
torch = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipykernel = "^6.15.1"
tqdm = "^4.64.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
